feat: shuffle and sort functionality on click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
 </header>
 <section>
       <div class="right-container text-center col-4 ">
+	  <app-shuffle></app-shuffle>
+<app-sort></app-sort>
    </div>
   <div  class="left-container col-8   text-center">
 <app-card></app-card>
