fix: responsive layout for mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
   <h2 class="text-center">Shuffle and Sort</h2>
 </header>
 <section>
-      <div class="right-container text-center col-4 ">
+      <div class="right-container text-center col-lg-4 col-md-4 col-sm-12 col-xs-12 ">
 	  <app-shuffle></app-shuffle>
 <app-sort></app-sort>
    </div>
-  <div  class="left-container col-8   text-center">
+  <div  class="left-container col-lg-8 col-md-8 col-sm-12 col-xs-12   text-center">
 <app-card></app-card>
 </div>
 </section>
