--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,10 +6,13 @@
 
 .right-container {
   border-top: solid 3px #bfbfbf;
-  float: right;
 }
 
 footer {
-  clear: both;
   line-height: 24px;
+}
+@media only screen and (min-width: 600px) {
+  .right-container {
+    float: right;
+  }
 }
