--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
   <div class="row">
-    <div class="card-content col-4"
+    <div class="card-content col-lg-4 col-md-4 col-sm-12 col-xs-12 "
      *ngFor="let item of items; let i = index"
      [class]="item.color"
      >
